build/log/idf_py_stdout_output_6016
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\HTN\Du_an_CKi\build\bootloader\esp-idf\esptool_py && D:\THVXL\Espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe D:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/partition_table/check_sizes.py --offset 0xc000 bootloader 0x0 D:/HTN/Du_an_CKi/build/bootloader/bootloader.bin"
Bootloader binary size 0x51f0 bytes. 0x6e10 bytes (57%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
ccache D:\THVXL\Espressif\tools\riscv32-esp-elf\esp-14.2.0_20250730\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/HTN/Du_an_CKi/build/config -ID:/HTN/Du_an_CKi/main -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/newlib/platform_include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/include/freertos -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/riscv/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/portable/riscv/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/esp_additions/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include/soc -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include/soc/esp32c3 -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/dma/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/ldo/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/debug_probe/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/port/esp32c3/. -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/port/esp32c3/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/heap/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/heap/tlsf -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/log/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/soc/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32c3 -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32c3/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32c3/register -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/hal/platform_port/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/hal/esp32c3/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/hal/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32c3/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32c3/include/esp32c3 -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32c3 -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_common/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/soc -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/include/riscv -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/include/private -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/riscv/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include/apps -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include/apps/sntp -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/lwip/src/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/freertos/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include/arch -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include/sys -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_adc/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_adc/interface -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_adc/esp32c3/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_adc/deprecated/include -ID:/HTN/Du_an_CKi/components/esp32-dht11/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/driver/deprecated -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/driver/i2c/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/driver/touch_sensor/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/driver/twai/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_pm/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_ringbuf/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_gpio/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_pcnt/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_gptimer/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_spi/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_mcpwm/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_ana_cmpr/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_i2s/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdmmc/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/sdmmc/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdspi/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdio/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_dac/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_rmt/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_tsens/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdm/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_i2c/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_uart/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/vfs/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_ledc/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_parlio/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_usb_serial_jtag/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_timer/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/nvs_flash/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_partition/include -ID:/HTN/Du_an_CKi/components/i2c_lcd/include -ID:/HTN/Du_an_CKi/managed_components/espressif__esp_diagnostics/include -ID:/HTN/Du_an_CKi/managed_components/espressif__button/include -ID:/HTN/Du_an_CKi/managed_components/espressif__button/interface -ID:/HTN/Du_an_CKi/components/esp_rainmaker/include -ID:/HTN/Du_an_CKi/managed_components/espressif__rmaker_common/include -ID:/THVXL/Espressif/frameworks/esp-idf-v5.4.3/components/esp_event/include -ID:/HTN/Du_an_CKi/managed_components/espressif__rmaker_app_insights -ID:/HTN/Du_an_CKi/managed_components/espressif__rmaker_app_network -ID:/HTN/Du_an_CKi/managed_components/espressif__rmaker_app_reset -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=D:/HTN/Du_an_CKi=. -fmacro-prefix-map=D:/THVXL/Espressif/frameworks/esp-idf-v5.4.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DBUTTON_VER_MAJOR=4 -DBUTTON_VER_MINOR=1 -DBUTTON_VER_PATCH=6 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c D:/HTN/Du_an_CKi/main/app_main.c
D:/HTN/Du_an_CKi/main/app_main.c: In function 'app_main':
D:/HTN/Du_an_CKi/main/app_main.c:250:81: error: 'ESP_RMAKER_DEVICE_SENSOR' undeclared (first use in this function); did you mean 'ESP_RMAKER_DEVICE_SPEAKER'?
  250 |     esp_rmaker_device_t *sensor_dev = esp_rmaker_device_create("Sensor Module", ESP_RMAKER_DEVICE_SENSOR, NULL);
      |                                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                                 ESP_RMAKER_DEVICE_SPEAKER
D:/HTN/Du_an_CKi/main/app_main.c:250:81: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
